--- a/EssentialFeediOS/Feed UI/Views/Feed.storyboard
+++ b/EssentialFeediOS/Feed UI/Views/Feed.storyboard
@@ -77,6 +77,9 @@
                                                             <buttonConfiguration key="configuration" style="plain" title="↻">
                                                                 <fontDescription key="titleFontDescription" type="system" pointSize="60"/>
                                                             </buttonConfiguration>
+                                                            <connections>
+                                                                <action selector="retryButtonTapped" destination="KbL-no-WLI" eventType="touchUpInside" id="Yjr-XU-FeU"/>
+                                                            </connections>
                                                         </button>
                                                     </subviews>
                                                     <color key="backgroundColor" red="0.89019607840000003" green="0.89019607840000003" blue="0.89019607840000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -118,6 +121,14 @@
                                         <constraint firstItem="LaR-t0-oXJ" firstAttribute="top" secondItem="xPC-n1-Szy" secondAttribute="topMargin" priority="999" constant="6" id="xJu-M4-6DJ"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="descriptionLabel" destination="tVD-Pi-Fmk" id="TZl-ZT-1HI"/>
+                                    <outlet property="feedImageContainer" destination="AQh-ik-jIF" id="cgz-xz-AV1"/>
+                                    <outlet property="feedImageRetryButton" destination="l01-bl-84z" id="49N-Aa-DNS"/>
+                                    <outlet property="feedImageView" destination="B7f-1i-K4Y" id="DJM-aU-miO"/>
+                                    <outlet property="locationContainer" destination="jQu-4r-dcR" id="EQl-H2-M8P"/>
+                                    <outlet property="locationLabel" destination="QHS-Z9-WeS" id="pPn-EK-d1F"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
